2009-01-21  Esteban Sanchez  <estebans@artica.es>

	* godmode/alerts/configure_alert_template.php,
	include/functions_alerts.php: Added missing matches_value field on
	creation and updating.

	* ChangeLog: Added missing path to files on previous commit.

2009-01-21  Sancho Lerena <slerena@artica.es>

	* pandoradb_migrate_20_to_21.sql: Fixes some problems.
	
	* godmode/setup/setup.php: Removed AD setup tokens.
	
	* godmode/users/user_list.php: Link to user edition was wrong.
	Restored.
	
	* include/functions_db.php: Support for new auth modules was missing
	and fgraph fails to render graphs.

2009-01-20  Esteban Sanchez  <estebans@artica.es>

	* godmode/alerts/configure_alert_template.php: Fixed an error when
	setting max and min values on template creation.

	* godmode/menu.php: Default action on "Manage alerts" is showing the
	templates now.

2009-01-20  Sancho Lerena <slerena@artica.es>

	* install.php: Added ldap module dep.
	
	* include/functions_reporting.php, operation/agentes/status_monitor.php
	operation/agentes/tactical.php, general/logon_ok.php: New filter options for
	warning/critical, removed old data stats and improved filters in module view

2009-01-20  Esteban Sanchez  <estebans@artica.es>

	* include/functions_visual_map.php: Fixed a notice when the node looks
	for any monitor down in an agent.

2009-01-20  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* ajax.php, include/config.inc.php, include/config_process.php,
	include/functions.php, include/functions_db.php, 
	include/functions_ui.php, index.php, install.php, 
	operation/users/user.php, operation/users/user_edit.php,
	reporting/fgraph.php: Added pluggable authentication and moved functions

	* general/login_page.php, general/logon_ok.php, 
	godmode/agentes/modificar_agente.php, 
	godmode/users/configure_users.php, godmode/users/user_list.php, 
	operation/agentes/estado_agente.php, operation/incidents/incident.php, 
	operation/incidents/incident_search.php: Updated functions
